--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,9 @@ yarn-error.log*
 pnpm-debug.log*
 
 # Env files
-.env
-.env.local
-.env.*.local
+# .env
+# .env.local
+# .env.*.local
 
 # Logs
 logs
