--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 VITE_API_BASE_URL=https://formularioback-production.up.railway.app/api
+VITE_RECAPTCHA_SITE_KEY=6LeLD5ErAAAAAC3Rv9AMrq3_UUP0q1ADgqB5l3fQ
